--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# DO NOT REMOVE #
+prisma/dev.db
+# DO NOT REMOVE #
+
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,storybookjs,nextjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,visualstudiocode,storybookjs,nextjs
 
