--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "seed-db": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seed.ts",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.[ts,tsx]": "next lint --fix"
+  },
   "dependencies": {
     "@next/font": "13.1.5",
     "@prisma/client": "^4.9.0",
