--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-# DO NOT REMOVE #
-prisma/dev.db
-# DO NOT REMOVE #
+# Created by https://www.toptal.com/developers/gitignore/api/nextjs,jetbrains+all,visualstudiocode,database
+# Edit at https://www.toptal.com/developers/gitignore?templates=nextjs,jetbrains+all,visualstudiocode,database
 
-# Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,storybookjs,nextjs
-# Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,visualstudiocode,storybookjs,nextjs
+### Database ###
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+*.db-shm
+*.db-wal
 
 ### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -129,12 +135,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-### StorybookJs ###
-# gitignore template for the Storybook, UI guide for front apps
-# website: https://storybook.js.org/
-
-storybook-static/
-
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -154,4 +154,4 @@ storybook-static/
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,storybookjs,nextjs
+# End of https://www.toptal.com/developers/gitignore/api/nextjs,jetbrains+all,visualstudiocode,database
