--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch --coverage",
     "seed-db": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seed.ts",
     "prepare": "husky install"
   },
@@ -36,21 +36,15 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@anatine/zod-mock": "^3.8.3",
     "@babel/core": "^7.20.12",
     "@faker-js/faker": "^7.6.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-coverage": "^0.0.7",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/cli": "^6.5.16",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/test-runner": "^0.9.3",
-    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/jest-axe": "^3.5.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -64,18 +58,22 @@
     "eslint-config-xo-react": "^0.27.0",
     "eslint-config-xo-space": "^0.34.0",
     "eslint-config-xo-typescript": "^0.55.1",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-unicorn": "^45.0.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0",
+    "jest": "^29.4.1",
+    "jest-axe": "^7.0.0",
+    "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "^21.1.0",
+    "next-router-mock": "^0.9.1",
     "prettier": "^2.8.3",
     "prisma": "^4.9.0",
-    "storybook-addon-next-router": "^4.0.2",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4"
   }
