--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "next start",
     "lint": "next lint --fix",
     "test": "jest --coverage",
-    "test:watch": "jest --watch --coverage",
+    "test:watch": "jest --watchAll --coverage",
     "seed-db": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seed.ts",
     "prepare": "husky install"
   },
