--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         run: pnpm i
       - name: Run EsLint
         run: npm run eslint
+      - name: Run Tests
+        run: npm run test
   codeql:
     name: CodeQL
     runs-on: ubuntu-latest
