--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Dependencies
-        run: pnpm i
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - uses: pnpm/action-setup@v2
+        with:
+          run_install: false
+      - id: pnpm-cache
+        shell: bash
+        run: echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-store-
+      - run: pnpm install
       - name: Run EsLint
-        run: npm run eslint
+        run: npm run lint
       - name: Run Tests
         run: npm run test
   codeql:
@@ -40,14 +53,3 @@ jobs:
       - uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{matrix.language}}"
-  merge:
-    name: Merge
-    needs: [lintTest, codeql]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Create PR
-        uses: peter-evans/create-pull-request@v4
-        with:
-          commit-message: Develop
-          branch: master
