--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,5 @@
 name: CI
-on:
-  push:
-    types: [ opened, synchronize, reopened ]
-    branches:
-      - develop
-  pull_request:
-    types: [ opened, synchronize, reopened ]
-    branches:
-      - develop
+on: [push, pull_request]
 jobs:
   lintTest:
     name: Lint & Test
