--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=18",
     "pnpm": ">=7"
   },
+  "packageManager": "pnpm@7.26.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -61,7 +62,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^45.0.2",
