--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,9 @@
     "@typescript-eslint/no-non-null-assertion": "error",
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/prefer-namespace-keyword": "error",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error"
+    ],
     "@typescript-eslint/strict-boolean-expressions": "error",
     "arrow-body-style": ["error", "always"],
     "capitalized-comments": "off",
