--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@trpc/react-query": "^10.10.0",
     "@trpc/server": "^10.10.0",
     "next": "13.1.6",
+    "nookies": "^2.5.2",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
